test/language/errors/errors_arithmetic.hm
# can't multiply boolean and integer (expected numbers)
# can't multiply integer and boolean (expected numbers)
# can't divide boolean and integer (expected numbers)
# can't divide integer and boolean (expected numbers)
# can't subtract boolean and integer (expected numbers)
# can't subtract integer and boolean (expected numbers)
# can't modulo boolean and integer (expected integers)
# can't modulo integer and boolean (expected integers)
# can't add integer and boolean

use "errors"

try { false * 2 } except e { echo runtime(e) }
try { 2 * false } except e { echo runtime(e) }

try { false / 2 } except e { echo runtime(e) }
try { 2 / false } except e { echo runtime(e) }

try { false - 2 } except e { echo runtime(e) }
try { 2 - false } except e { echo runtime(e) }

try { false % 2 } except e { echo runtime(e) }
try { 2 % false } except e { echo runtime(e) }

try { 2 + false } except e { echo runtime(e) }
